# CapstoneP3

./: EntryQueueManager_class.cpp  EntryQueueManager_main.cpp  Login Details  README.md  Video  exe_file  h_printqueuestatus.cpp  h_printqueuestatus.h  h_printqueuestatus.ui  ppt
Capstone_P3_GUI/: CMakeLists.txt  Resource.qrc  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
H_Capstone/: CMakeLists.txt  h_appqnc.cpp  h_appqnc.h  h_appqnc.ui  h_famgroupyn.cpp  h_famgroupyn.h  h_famgroupyn.ui  h_inputwindow.cpp  h_inputwindow.h  h_inputwindow.ui  h_newcomeryn.cpp  h_newcomeryn.h  h_newcomeryn.ui  h_switchinfo.cpp  h_switchinfo.h  h_switchinfo.ui  h_switchtogate.cpp  h_switchtogate.h  h_switchtogate.ui  mainwindow.cpp
NoOfPeople/: h_noofpeople.cpp  h_noofpeople.h  h_noofpeople.ui
P3_GUI/: CMakeLists.txt  class.cpp  family.cpp  family.h  family.ui  goto.cpp  goto.h  goto.ui  input_window.cpp  input_window.h  input_window.ui  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcomeryn.cpp  newcomeryn.h  newcomeryn.ui  no_of_ppl.cpp  no_of_ppl.h  no_of_ppl.ui  q_status.cpp  q_status.h  q_status.ui  switch_info.cpp  switch_info.h  switch_info.ui  switch_to_gate.cpp  switch_to_gate.h  switch_to_gate.ui  vip.cpp  vip.h  vip.ui
SwitchWithFam/: h_shiftfamyn.cpp  h_shiftfamyn.h  h_shiftfamyn.ui  h_switchinfofg.cpp  h_switchinfofg.h  h_switchinfofg.ui
